replaced alignmentStartSortedCounts with a boolean flag wrapped alongside the SAMRecord to track if record has been through marking